fix(pinnedNotes): align left and right padding with other tiles

--- a/src/css/pages/overview.css
+++ b/src/css/pages/overview.css
@@ -211,7 +211,7 @@
 /* Pinned Notes */
 .pinned-notes.tile {
   gap: 0.75rem;
-  padding: 1.5rem;
+  padding: 1.5rem var(--padding-card);
   container-type: inline-size;
 }
 
